# plutimikation

./: .gitignore  Makefile.am  README  config.h.in
admin/: acinclude.m4.in  detect-autoconf.sh
admin/CVS/: Entries  Root
doc/en/: Makefile  Makefile.am
pics/: Makefile.am  licenses.txt
po/: de.po  plutimikation.pot
src/: Makefile.am  README  configdialog.cpp  configdialog.h  krandom.cpp  krandom.h  main.cpp  mainview.cpp  mainview.h  newgameview.cpp  newgameview.h  plutimikation.cpp  plutimikation.desktop  plutimikation.h  plutimikation.kcfg  plutimikationui.rc  prefs.kcfgc  question.cpp  question.h  questionset.cpp  questionset.h  questionsetcube.cpp  questionsetcube.h  questionsetcubics.cpp  questionsetcubics.h  questionsetdivision.cpp  questionsetdivision.h  questionsetmultiplication.cpp  questionsetmultiplication.h  questionsetquadrats.cpp  questionsetquadrats.h  questionsetsquares.cpp  questionsetsquares.h  resultview.cpp  resultview.h  resultviewpic.cpp  resultviewpic.h  resultviewtext.cpp  resultviewtext.h
suse/: plutimikation.spec
